--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,32 @@ services:
       - .:/app
     environment:
       - PYTHONUNBUFFERED=1
+    env_file:
+      - .env
+    command: [
+        "uvicorn", 
+        "product_pipeline:app", 
+        "--host", "0.0.0.0", 
+        "--port", "8080", 
+        "--reload"
+      ]
+    healthcheck:
+      test: [
+          "CMD", "curl", 
+          "-f", "http://localhost:8080/healthcheck"
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    restart: always
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
