--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   app:
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
@@ -19,11 +20,8 @@ services:
         "--reload"
       ]
     healthcheck:
-      test: [
-          "CMD", "curl", 
-          "-f", "http://localhost:8080/healthcheck"
-        ]
-      interval: 30s
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/healthcheck || exit 1"]
+      interval: 60s
       timeout: 10s
       retries: 3
     logging:
