--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -15,6 +15,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: TEST
+      run: echo ${{ github.repository }}
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -30,8 +33,8 @@ jobs:
         context: .
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:latest
-          ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }}
+          ${{ secrets.DOCKER_USERNAME }}/product-pipeline:latest
+          ${{ secrets.DOCKER_USERNAME }}/product-pipeline:${{ github.sha }}
 
 
 
