--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -33,28 +33,20 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
             ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          version: "latest"
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account: ${{ secrets.GCP_SA_KEY }}
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
 
 
 
 
 
-
-    # - name: Set up Cloud SDK
-    #   uses: google-github-actions/setup-gcloud@v1
-    #   with:
-    #     version: 'latest'
-    #     project_id: ${{ secrets.GCP_PROJECT_ID }}
-    #     service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-    ## TODO - Push to dockerhub registry
-    # - name: Configure Docker
-    #   run: gcloud auth configure-docker
-
-    # - name: Build Docker image
-    #   run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:$GITHUB_SHA .
-
-    # - name: Push Docker image
-    #   run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:$GITHUB_SHA
 
     # - name: Deploy to Cloud Run
     #   run: |
