--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,8 +3,10 @@ name: Deployment
 on:
   push:
     branches:
-      - "*"
-      # - main
+      - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
