--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -47,14 +47,19 @@ jobs:
           version: "latest"
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
+      - name: Debug - Print CLOUD_RUN_SERVICE
+        run: echo "CLOUD_RUN_SERVICE is set to '${{ env.CLOUD_RUN_SERVICE }}'"
+        env:
+          CLOUD_RUN_SERVICE: ${{ github.event.repository.name }}
+
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy $CLOUD_RUN_SERVICE \
-            --image ${{ secrets.DOCKER_USERNAME }}/${{ github.repository_name }}:latest \
+          gcloud run deploy "${CLOUD_RUN_SERVICE}" \
+            --image "${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest" \
             --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
+            --region "${{ secrets.GCP_REGION }}" \
             --allow-unauthenticated \
-            --project ${{ secrets.GCP_PROJECT_ID }} \
+            --project "${{ secrets.GCP_PROJECT_ID }}" \
             --update-secrets="PRINTIFY_API_KEY=PRINTIFY_API_KEY:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,GH_PAT=GH_PAT:latest,GH_UPLOAD_REPO=GH_UPLOAD_REPO:latest,GH_CONTENT_PREFIX=GH_CONTENT_PREFIX:latest"
         env:
-          CLOUD_RUN_SERVICE: ${{ github.repository_name }}
+          CLOUD_RUN_SERVICE: ${{ github.event.repository.name }}
