--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,14 +7,14 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - .:/app
+      - ./app:/app
     environment:
       - PYTHONUNBUFFERED=1
     env_file:
       - .env
     command: [
         "uvicorn", 
-        "product_pipeline:app", 
+        "app:app", 
         "--host", "0.0.0.0", 
         "--port", "8080", 
         "--reload"
