--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -65,6 +65,6 @@ jobs:
             --region "${{ secrets.GCP_REGION }}" \
             --allow-unauthenticated \
             --project "${{ secrets.GCP_PROJECT_ID }}" \
-            --update-secrets="PRINTIFY_API_KEY=PRINTIFY_API_KEY:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,GH_PAT=GH_PAT:latest,GH_UPLOAD_REPO=GH_UPLOAD_REPO:latest,GH_CONTENT_PREFIX=GH_CONTENT_PREFIX:latest,API_KEY=API_KEY:latest,SHOPIFY_API_KEY=SHOPIFY_API_KEY:latest,SHOPIFY_API_ACCESS_TOKEN=SHOPIFY_API_ACCESS_TOKEN:latest,SHOPIFY_SHOP_NAME=SHOPIFY_SHOP_NAME:latest"
+            --update-secrets="PRINTIFY_API_KEY=PRINTIFY_API_KEY:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,GH_PAT=GH_PAT:latest,GH_UPLOAD_REPO=GH_UPLOAD_REPO:latest,GH_CONTENT_PREFIX=GH_CONTENT_PREFIX:latest,API_KEY=API_KEY:latest,SHOPIFY_API_KEY=SHOPIFY_API_KEY:latest,SHOPIFY_API_ACCESS_TOKEN=SHOPIFY_API_ACCESS_TOKEN:latest,SHOPIFY_SHOP_NAME=SHOPIFY_SHOP_NAME:latest,FIRESTORE_USER=FIRESTORE_USER:latest"
         env:
           CLOUD_RUN_SERVICE: ${{ github.event.repository.name }}
